--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ button:hover {
     border-radius: 8px;
 }
 
+.button2 {
+    border-radius: 8px;
+    border-color: #E5E7EB;
+    border-style: solid;
+    margin-right: 64px;
+}
+
 .header-links a, .hero-left {
     color: #E5E7Eb;
     font-size: 18px;
@@ -77,6 +84,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     margin-right: 32px;
+    gap: 8px;
 }
 
 .hero-text {
@@ -132,14 +140,13 @@ button:hover {
 .quote .inside {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 32px;
+    padding: 96px;
     gap: 16px;
-    max-width: 900px;
+    max-width: 720px;
 }
 
 .quote .inside .text {
+    display: flex;
     flex: 1;
     font-size: 36px;
     font-style: italic;
@@ -149,10 +156,49 @@ button:hover {
 }
 
 .quote .inside .attributation {
+    display: flex;
     flex: 1;
     font-size: 24px;
     font-weight: bolder;
     color: #1F2937;
-    margin-top: 32px;
-    text-align: right;
+    justify-content: right;
+}
+
+.call .inside {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    margin: 64px auto;
+    background-color: #3882F6;
+    border-radius: 8px;
+    max-width: 1200px;
+    justify-content: space-between;
+}
+
+.call-left {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin-left: 64px;
+    gap: 8px;
+}
+
+.call-header {
+    flex: 1;
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.call-text {
+    flex: 1;
+    color: #E5E7Eb;
+    font-size: 18px;
+}
+
+.footer {
+    background-color: #1F2937;
+    text-align: center;
+    padding: 16px;
+    color: #E5E7Eb;
+    font-size: 18px;
 }
